# cctop

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: check-pr.yml  check.yml
demo/: plan.md
src/cctop/: app.py
src/cctop/core/: __init__.py  agents.py  models.py  records.py  session.py  usage.py
src/cctop/views/: keys.py  monitor.py  picker.py  protocols.py  style.py
tests/: conftest.py  test_app.py
tests/core/: conftest.py  test_agents.py  test_models.py  test_records.py  test_session.py  test_usage.py
tests/views/: test_keys.py  test_monitor.py  test_picker.py
